# shutty_utility_linux

./: CMakeLists.txt  README.md  main.c  shutdown.c  shutdown.h  style.css
